force-app/main/default/objects/TriggerSetting__c/fields/AccountProspectTriggerChackBox__c.field-meta.xml
<CustomField>
    <fullName>AccountProspectTriggerChackBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountProspectTriggerChackBox</label>
    <type>Checkbox</type>
</CustomField>