force-app/main/default/objects/TriggerSetting__c/fields/ChangeInventoryQuantityCheckBox__c.field-meta.xml
<CustomField>
    <fullName>ChangeInventoryQuantityCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChangeInventoryQuantityCheckBox</label>
    <type>Checkbox</type>
</CustomField>