force-app/main/default/objects/TriggerSetting__c/fields/ContactTriggerCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ContactTriggerCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactTriggerCheckbox</label>
    <type>Checkbox</type>
</CustomField>