force-app/main/default/objects/TriggerSetting__c/fields/CustomerInquiryTrigger__c.field-meta.xml
<CustomField>
    <fullName>CustomerInquiryTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomerInquiryTrigger</label>
    <type>Checkbox</type>
</CustomField>