force-app/main/default/objects/TriggerSetting__c/fields/EventTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>EventTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EventTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>