force-app/main/default/objects/TriggerSetting__c/fields/InventoryTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>InventoryTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InventoryTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>