force-app/main/default/objects/TriggerSetting__c/fields/InvoiceTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>