force-app/main/default/objects/TriggerSetting__c/fields/ItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>ItemTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ItemTrigger</label>
    <type>Checkbox</type>
</CustomField>