force-app/main/default/objects/TriggerSetting__c/fields/JLITriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>JLITriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JLITriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>