force-app/main/default/objects/TriggerSetting__c/fields/LeadTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>LeadTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeadTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>