force-app/main/default/objects/TriggerSetting__c/fields/PartTrigger__c.field-meta.xml
<CustomField>
    <fullName>PartTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartTrigger</label>
    <type>Checkbox</type>
</CustomField>