force-app/main/default/objects/TriggerSetting__c/fields/PaymentTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>PaymentTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>