force-app/main/default/objects/TriggerSetting__c/fields/ProductPriceTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProductPriceTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>