force-app/main/default/objects/TriggerSetting__c/fields/QuoteTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>QuoteTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>