force-app/main/default/objects/TriggerSetting__c/fields/TMRollUpTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>TMRollUpTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMRollUpTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>