force-app/main/default/objects/TriggerSetting__c/fields/TMTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>TMTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>