force-app/main/default/objects/TriggerSetting__c/fields/UserTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>UserTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UserTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>