force-app/main/default/objects/TriggerSetting__c/fields/WorkOrderJobTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderJobTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrderJobTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>