force-app/main/default/objects/TriggerSetting__c/fields/WorkOrderPaymentTriggerCheckBox__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderPaymentTriggerCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrderPaymentTriggerCheckBox</label>
    <type>Checkbox</type>
</CustomField>