force-app/main/default/objects/TriggerSetting__c/fields/WorkOrderTriggerHandlerChecBox__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderTriggerHandlerChecBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrderTriggerHandlerChecBox</label>
    <type>Checkbox</type>
</CustomField>